Fix: Job Listing - Fixed spacing for No jobs msg - View All Jobs hidden on All jobs page - Job Description Style improvements

--- a/utils/styles/main.scss
+++ b/utils/styles/main.scss
@@ -363,19 +363,19 @@ body {
     background: #f7ce55 linear-gradient(to bottom, rgba(255, 255, 255, 0) 75%, #e18700);
   }
 }
-@media screen and (min-width: 2000px) {
+@media screen and (min-width: 1920px) {
   .yellow-bg-gradient {
-    height: 90vh;
+    height: 60vh;
   }
   .full-height {
     min-height: 60vh;
   }
 }
-@media screen and (max-width: 576px) {
-  .yellow-bg-gradient {
-    height: 80vh;
-  }
-}
+// @media screen and (max-width: 576px) {
+//   .yellow-bg-gradient {
+//     height: 80vh;
+//   }
+// }
 
 .xs-listings {
   .header {
@@ -884,11 +884,11 @@ body {
 
 .jobDescription {
   .banner {
-    height: 75vh;
+    height: 50vh;
     @media screen and (max-width: 576px) {
-      height: 60vh;
+      height: 50vh;
       .full-height-one {
-        height: 60vh;
+        height: 50vh;
       }
     }
   }
